checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000192240.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
> > build-r7178.out:/local/linsrc/tmp/mmotm-2008-1215-1645/mm/vmscan.c:1397: error: too few arguments to function 'mem_cgroup_inactive_anon_is_low'

WARNING:TYPO_SPELLING: 'calclation' may be misspelled - perhaps 'calculation'?
#55: 
Subject: [mmotm][PATCH] memcg: fix calclation of active_ratio build error fix
                                   ^^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000192240.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 2 warnings, 0 checks, 8 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000192240.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
